--- a/frontendweb/src/app/login/login.component.html
+++ b/frontendweb/src/app/login/login.component.html
@@ -1,3 +1,21 @@
-<p>
-  login works!
-</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<div class = "container-fluid" id = "tam">
+  <div class = "row">
+    <div class = "col-md-12">
+      <form calss = "form-signin">
+        <div class="form-group">
+          <label for="exampleInputEmail1">User</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User" #user>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" #password>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click) = "login(user.value, password.value)">Login</button>
+            <button type="button" class="btn btn-primary"(click) = "adduser(user.value, password.value)">Register</button>
+          </div>
+      </form>
+  </div>
+  </div>
+</div>
