finalizando o update das materias

--- a/frontendweb/src/app/materias/materias.component.html
+++ b/frontendweb/src/app/materias/materias.component.html
@@ -97,7 +97,7 @@
   <input class="form-control form-control-sm" type="text" placeholder="{{mymateria.ab2}}" #AB2>
   <input class="form-control form-control-sm" type="text" placeholder="{{mymateria.reav}}" #reav>
   <input class="form-control form-control-sm" type="text" placeholder="{{mymateria.final}}" #Final>
-  <input class="form-control form-control-sm" type="text" placeholder="{{mymateria.carga_horaria}}" #Carga>
-  <button type="button" class="btn btn-secondary btn-lg btn-block" (click) = 'update(Nome.value, AB1.value, AB2.value, reav.value, Final.value, Carga.value)'>Salvar Mudanças</button>
+  <input class="form-control form-control-sm" type="text" placeholder="{{mymateria.faltas}}" #faltas>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" (click) = 'update(Nome.value, AB1.value, AB2.value, reav.value, Final.value, faltas.value)'>Salvar Mudanças</button>
   <h1>{{Erro}}</h1>
 </form>
